--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Bree+Serif&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+header::before {
+  background: url("https://cdn.pixabay.com/photo/2017/04/06/11/37/silhouette-2208079_1280.png")
+    no-repeat center/cover;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.6;
+}
+
+.container-box {
+  border: 7px solid grey;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  width: 40vw;
+  padding: 50px;
+  margin: 150px auto;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-section .heading {
+  text-align: center;
+  font-family: 'Baloo 2', cursive;
+  font-size: 35px;
+}
+
+.form-section .btn {
+  width: 33%;
+  background-color: lightblue;
+  border-radius: 30px;
+  height: 50px;
+  margin: auto;
+  font-size: 20px;
+  font-family: 'Baloo 2', cursive;
+  font-weight: 400;
+}
+
+.form-section .btn:hover {
+  background-color: #468B97;
+}
+
+.form-section input {
+  text-align: center;
+  display: block;
+  width: 30vw;
+  height: 30px;
+  padding: 9px;
+  border: 2px solid black;
+  margin: 10px auto;
+  font-size: 20px;
+  border-radius: 20px;
+}
+
+.form-section input[type="number"]::placeholder {
+  text-align: center;
 }
